[package]
name = "locknest"
version = "0.1.0"
authors = ["serprex"]

[dependencies]
iron = "0.5"
mount = "0.3"
router = "0.5"
staticfile = { version = "0.4", features = ["cache"] }
urlencoded = "0.5"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

csv = "1.0.0-beta.3"
fnv = "1.0.5"
lazy_static = "0.2"
